# rune

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  coordination.md  deno.json  feedback.md  install-cli  install.sh  keywords.json  uninstall.sh
.githooks/: pre-push
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/analyzer/: dtos.rs  faults.rs  methods.rs  mod.rs  nouns.rs  polymorphic.rs  requirements.rs  types.rs
cli/src/commands/: format.rs  generate.rs  init.rs  install.rs  mod.rs  render.rs  validate.rs
cli/src/configs/: mod.rs  trait.rs
cli/src/configs/ts_deno_native_class_validator_esm/: dto.rs  impure.rs  integration.rs  mod.rs  polymorphic.rs  pure.rs
clients/vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
docs/: branch-phase2-keep-integration.md  constraints.md  example.reqspec  example.rune  phase2-keep-integration.md  phase2-verification.md  rules-cheatsheet.md  spec.md  syntax-highlighting.md
editors/: emacs.sh  helix.sh  neovim.sh  sublime.sh  vscode.sh  zed.sh
editors/neovim/: init.lua
example/cake/: README.md
fixtures/specs/: deno.json
grammar/: grammar.js  package.json  tree-sitter.json
grammar/src/: grammar.json  node-types.json  parser.c  scanner.c
lang/: README.md
lsp/: Cargo.toml
lsp/src/: main.rs  parser.rs
palettes/: catppuccin.json  mesa-vapor.hex  mesa-vapor.json
parser/: Cargo.toml
queries/: highlights.scm
scripts/: install.sh  uninstall.sh
supported-software/: helix.sh  neovim.sh
(+457 files in other folders)
