[package]
name = "rune-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for generating scaffolded code from .rune specs"

[[bin]]
name = "rune"
path = "src/main.rs"

[dependencies]
rune-parser = { path = "../parser" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5"
inquire = "0.7"

[dev-dependencies]
tempfile = "3"
