[package]
name = "rune"
version = "0.1.0"
edition = "2024"
description = "Lightning-fast LSP for rune files"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ropey = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
